--- a/src/assets/scss/public.scss
+++ b/src/assets/scss/public.scss
@@ -49,3 +49,33 @@ $base-font-size-offset: 2px;
   border-bottom: 1px solid black;
   background-color: $light-main;
 }
+
+@mixin base-wrapper() {
+  position: relative;
+  border: 1px solid $dark-main;
+  width: 90%;
+  box-sizing: border-box;
+  padding: 80px 80px;
+}
+
+@mixin center-elements() {
+  display: flex;
+  align-items: center;
+}
+
+%h2 {
+  @include fix-text();
+  @include base-text-gradient();
+  font-size: 40px;
+  margin: -3px 0 0 -1px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+%h3 {
+  @include fix-text();
+  @include base-text-gradient();
+  font-size: 20px;
+}
